UI-2906 UI-2907 updates to my account balance screen, fixed wording and table overflow

--- a/src/apps/myaccount/submodules/balance/balance.scss
+++ b/src/apps/myaccount/submodules/balance/balance.scss
@@ -24,6 +24,11 @@
 	border-right: none;
 }
 
+.balance-content-wrapper .balance-table-header {
+	position: relative;
+	margin-bottom: 15px;
+}
+
 .balance-content-wrapper .balance-table-header > span {
 	margin-right: 5px;
 }
